update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Winona-b-A-tale-of-Negro-life-in-the-South-and-Southwest_70087
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70087-h/images/cover.jpg
 creator:
   author:
     agent_name: Hopkins, Pauline E. (Pauline Elizabeth)
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/55156
     wikipedia: https://en.wikipedia.org/wiki/Pauline_Hopkins
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70087#Winona-b-A-tale-of-Negro-life-in-the-South-and-Southwest
 gutenberg_issued: '2023-02-20'
 identifiers:
   gutenberg: '70087'
